# tauri-action

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  OUT=  README.md  action.yml  eslint.config.js  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json
.changes/: action-dist.md  action-runtime.md  add-preferGlobal-option.md  add-version-output.md  allow-binaries-without-artifacts.md  app-tar-fix.md  appimage-arm.md  appimage-artifacts.md  appimage-update-file-ending.md  apple-tar.md  apply-distpath.md  args.md  artifacts-output.md  artifacts-profile-arg.md  breaking-remove-configpath.md  build-action-on-preversion.md  build-fix.md  bundle-identifier.md  change-import-path.md  config.json  configtoml-target-flag.md  custom-repo.md  custom-script.md  custom-target.md  debug-build.md  delete-assets.md  dev-bun.md  dev-dependency-support.md  drop-vue-cli-support.md  enhanve-tauridir-search-gitignore.md  exec-command-fix.md  feat-cli-version.md  feat-updater-json.md  feat-upload-with-tag-name.md  fix-asset-name.md  fix-config-merge.md  fix-debug.md  fix-linux-bundle-names.md  fix-member-globs.md  fix-npx-workspace.md  (+53 more)
.github/fixtures/example-v2/: package.json
.github/fixtures/example-with-tauri-v1/: package.json  pnpm-lock.yaml
.github/fixtures/example-with-tauri-v2/: package.json
.github/fixtures/example-with-tauri-v2/src-tauri/: Cargo.toml  tauri.conf.json
.github/fixtures/example-with-tauri-v2/src-tauri/src/: lib.rs  main.rs
.github/workflows/: ci.yml  covector-status.yml  covector-version-or-publish.yml  test-action.yml  test.yml
__fixtures__/.cargo/: config.toml
__fixtures__/example/: package.json
__fixtures__/example-v1/: package.json
__fixtures__/example-with-tauri/: package.json
__fixtures__/example-with-tauri-v1/: package.json
__fixtures__/example-with-tauri/src-tauri/: Cargo.toml  tauri.conf.json
__fixtures__/example-with-tauri/src-tauri/src/: main.rs
example/: .gitignore  package.json
examples/: publish-to-auto-release.yml  publish-to-manual-release.yml  test-build-only.yml
src/: build-mobile.ts  build-project.ts  build.ts  config.ts  core.ts  create-release.ts  external-modules.d.ts  index.ts  init-project.ts  main.ts  runner.ts  test.js  types.d.ts  upload-release-assets.ts  upload-version-json.ts  utils.ts
(+5 files in other folders)
