[package]
name = "test-app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tauri = { version = "1", features = ["api-all", "updater"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
