[package]
name = "test-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[features]
prod = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
lto = false
debug = false

[profile.release]
opt-level = 0
lto = false
